syntax = "proto3";

package org.hitachivantara.echo.grpc;

// import "google/api/annotations.proto";

option java_multiple_files = true;

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service EchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
        /*
    {
        option (google.api.http) = {
          post: "/v1/example/echo"
          body: "*"
        };
    }
*/
}